--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 
 <main>
-  <router-outlet></router-outlet>
+  <app-song-create></app-song-create>
+  <!--<router-outlet></router-outlet>-->
 </main>
