integrate multer for uploads images

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 
 <main>
-  <app-song-create></app-song-create>
-  <!--<router-outlet></router-outlet>-->
+  <router-outlet></router-outlet>
 </main>
