--- a/frontend/src/app/components/songs/song-list/song-list.component.html
+++ b/frontend/src/app/components/songs/song-list/song-list.component.html
@@ -1,1 +1,18 @@
-<p>song-list works!</p>
+<mat-accordion multi="true" *ngIf="songService.songs.length > 0">
+  <mat-expansion-panel *ngFor="let song of songService.songs">
+    <mat-expansion-panel-header>
+      {{ song.title }}
+    </mat-expansion-panel-header>
+    <p>{{ song.artist }}</p>
+    <p>{{ song.album }}</p>
+    <p>{{ song.release_date | date:'medium' }}</p>
+    <p>{{ song.genre }}</p>
+    <img src="{{ song.imagePath }}" alt="{{ song.title }}">
+    <mat-action-row>
+      <button mat-button color="primary">Edit</button>
+      <button mat-button color="warn">Delete</button>
+    </mat-action-row>
+  </mat-expansion-panel>
+</mat-accordion>
+
+<p class="info-text mat-body-1" *ngIf="songService.songs.length <= 0">No song added yet!</p>
