--- a/frontend/src/app/components/songs/song-list/song-list.component.html
+++ b/frontend/src/app/components/songs/song-list/song-list.component.html
@@ -7,10 +7,10 @@
     <p>{{ song.album }}</p>
     <p>{{ song.release_date | date:'medium' }}</p>
     <p>{{ song.genre }}</p>
-    <img src="{{ song.imagePath }}" alt="{{ song.title }}">
+    <img [src]="'http://localhost:3000/' + song.imagePath" alt="{{ song.title }}">
     <mat-action-row>
-      <button mat-button color="primary">Edit</button>
-      <button mat-button color="warn">Delete</button>
+      <a mat-button color="primary" [routerLink]="['/edit', song._id]">Edit</a>
+      <button mat-button color="warn" (click)="onDelete(song._id)">Delete</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
